<resources>
    <string name="app_name">Quick Match</string>
    <string name="about_us_title">About Us:</string>
    <string name="about_us_des">Ram Michaeli, Gal Israeli and Yulia Kuderko\nFirst published: July 13th, 2021</string>
    <string name="easy_btn">Beginner</string>
    <string name="medium_btn">Advanced</string>
    <string name="hard_btn">Professional</string>
    <string name="dual_btn">1 VS 1</string>
    <string name="no_music">Music is off 🔕</string>
    <string name="no_sound">Sound is off 🔇</string>
    <string name="music_on">Music is on 🔔</string>
    <string name="sound_on">Sound is on 🔈</string>
    <string name="areYouSureYouWannaQuit">Are you sure you want to quit ?</string>
    <string name="restart_btn">Restart</string>
    <string name="resume_btn">Resume</string>
    <string name="back_to_menu_btn">Back to main menu</string>
    <string name="about_us_pop_up">About Us</string>
    <string name="creators">Creators:</string>
    <string name="Yes_btn">Yes</string>
    <string name="No_btn">No</string>
    <string name="Username">Username</string>
    <string name="Score">Score</string>
    <string name="high_scores">High Scores</string>
    <string name="clear_btn">Clear</string>
    <string name="points_calculator">"Points: "</string>
    <string name="moving_shape_alarm">Moving shape!</string>
    <string name="disppearing_pause_notice">Paused</string>
    <string name="cancel_btn">Cancel</string>
    <string name="areYouSureYouWannaClear">Are you sure you want to clear all scores?</string>
    <string name="game_over">Game Over !</string>
    <string name="nickname_et">Enter your nickname</string>
    <string name="submit_btn">Submit</string>
    <string name="main_menu_btn">Main Menu</string>
    <string name="replay_btn">Play again</string>
    <string name="levels_played">Levels played:</string>
    <string name="time_played">Time played:</string>
    <string name="final_score">Final score:</string>
    <string name="share_score_btn">Share</string>
    <string name="unknown_user">Unknown</string>
    <string name="pause_topic">Paused</string>
    <string name="fantastic_plane">Fantastic</string>
    <string name="new_high_score">New High Score!</string>
    <string name="well_done_topic">Well Done!</string>
    <string name="with_share">I\'m on Quick Match! 🎨\nLet\'s see if you can beat me 🏅</string>
    <string name="mins">m</string>
    <string name="secs">s</string>
    <string name="submit_nick">Your score has been added to the high score list</string>
    <string name="welcome_tutorial">Welcome to the tutorial , click next to begin</string>
    <string name="progress_tutorial">This is the progress bar\nit indicates how much time you have left</string>
    <string name="next_tutorial">Next</string>
    <string name="shape_tutorial">This is the shape that\nyou will have to match your answer to</string>
    <string name="match_color_tutorial">You match your answer by rotating the colors</string>
    <string name="match_color2_tutorial">The top color is your answer</string>
    <string name="shape2_tutorial">Same thing for the shape</string>
    <string name="thats_all_tutorial">And thats all you need to know!</string>
    <string name="finish_tutorial">Finish</string>
    <string name="replay_tutorial">Replay</string>
    <string name="simple_right_tutorial">Simple, right?</string>
    <string name="seeyou_ingame_tutorial">See you in-game!</string>
</resources>