<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/info_selector">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/quick_match_logo"
        android:layout_gravity="center"
        android:id="@+id/logo_in_info"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:shadowColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:text="@string/about_us_pop_up"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:shadowColor="@color/white"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/creators"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_des"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:shadowColor="@color/white"
        android:shadowRadius="20"
        android:textStyle="italic"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:id="@+id/info_aboutUS"
        android:layout_marginBottom="20dp" />
</LinearLayout>

