<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <ImageView
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/color_match_topic"
        android:id="@+id/colormatch"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/colormatch"
        android:id="@+id/buttonsLinearLayout">
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="#5666C3"
            android:background="@drawable/custom_button"
            android:text="@string/easy_btn"
            android:fontFamily="@font/noot_aj"
            android:id="@+id/easy_btn"
            android:paddingTop="5dp"
            android:shadowColor="@color/white"
            android:shadowRadius="10"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="#5666C3"
            android:background="@drawable/custom_button"
            android:text="@string/medium_btn"
            android:fontFamily="@font/noot_aj"
            android:layout_marginTop="25dp"
            android:id="@+id/medium_btn"
            android:paddingTop="5dp"
            android:shadowColor="@color/white"
            android:shadowRadius="10"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="#5666C3"
            android:background="@drawable/custom_button"
            android:text="@string/hard_btn"
            android:fontFamily="@font/noot_aj"
            android:layout_marginTop="25dp"
            android:id="@+id/hard_btn"
            android:paddingTop="5dp"
            android:shadowColor="@color/white"
            android:shadowRadius="10"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:textColor="#5666C3"
            android:background="@drawable/custom_button"
            android:text="@string/dual_btn"
            android:fontFamily="@font/noot_aj"
            android:layout_marginTop="25dp"
            android:id="@+id/dual_btn"
            android:paddingTop="5dp"
            android:shadowColor="@color/white"
            android:shadowRadius="10"/>








    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/about_us_button"
        android:src="@drawable/ic_outline_info_24"
        android:layout_below="@id/buttonsLinearLayout"
        android:layout_centerInParent="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/music_button"
        android:src="@drawable/music_selector"
        android:layout_below="@id/about_us_button"
        android:layout_centerInParent="true"/>

        <Button
            android:id="@+id/goToDBbtn"
            android:layout_width="133dp"
            android:layout_height="90dp"
            android:clickable="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true" />


</RelativeLayout>

