<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="ltr"
    android:background="@drawable/game_background"
    >

    <!--Pause Button-->
    <ImageButton
        android:layout_width="25dp"
        android:layout_height="35dp"
        android:src="@drawable/pause_button"
        android:scaleType="fitCenter"
        android:background="@null"
        android:id="@+id/pauseBtn"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"/>


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="-60dp"
        android:src="@drawable/trap_arrows"
        android:scaleType="fitCenter"
        android:background="@null"
        android:id="@+id/trap_arrows_iv"
        android:layout_below="@+id/current_high_score_trophy"
        android:layout_marginTop="40dp"
        android:alpha="0"/>

<!--**** צריך לחשוב על משהו אחר מהתזוזה של הצורה כמו שהצורות שבגלגל הימני יסתבבו סביב עצמן ויעלה אייקון על המסך-->
<!--    במקום הכתב-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/moving_shape_alarm"
        android:textStyle="bold"
        android:fontFamily="@font/main_app_font"
        android:textSize="30sp"
        android:alpha="0"
        android:id="@+id/movingShapeAlert" />

    <!--Disappearing Pause Text View-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disppearing_pause_notice"
        android:layout_alignBottom="@id/main_shape_color"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:fontFamily="@font/main_app_font"
        android:visibility="invisible"
        android:id="@+id/pause" />


<!--Trophy image-->
    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/current_high_score_trophy_pic"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:id="@+id/current_high_score_trophy" />

<!--   Highest record-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_app_font"
        android:layout_toRightOf="@id/current_high_score_trophy"
        android:layout_marginTop="4.5dp"
        android:textSize="25sp"
        android:id="@+id/highest_score_tv" />

<!--How many points scored?-->
    <TextView
        android:id="@+id/tv_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/points_calculator"
        android:textStyle="bold"
        android:fontFamily="@font/main_app_font"
        android:textSize="25sp"
        android:layout_marginTop="3dp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@id/tv_points"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:paddingBottom="5dp"
        android:progressDrawable="@drawable/custom_progressbar" />

<!--Main shape outline image-->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:layout_below="@id/progressbar"
        android:id="@+id/main_shape_outline"
        android:layout_centerHorizontal="true" />

<!--    Main shape color fill image-->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerInside"
        android:layout_below="@id/progressbar"
        android:id="@+id/main_shape_color"
        android:layout_centerHorizontal="true" />

    <!--Layout of Wheels-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_shape_color"
        android:layout_centerHorizontal="true"
        android:id="@+id/rotating_answers_linear_layout">

       <!-- Colors Wheel-->

        <!--Shapes Wheel-->



        <ImageView
            android:id="@+id/fourColorsImage"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:paddingEnd="-4dp"
            android:scaleType="centerInside"
            android:src="@drawable/newcolors"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fourShapes_layout">

            <ImageView
                android:id="@+id/shape_TOP"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerInside"
                android:src="@drawable/noodles_1_outline"
                app:layout_constraintBottom_toTopOf="@+id/shape_RIGHT"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/shape_RIGHT"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:scaleType="centerInside"
                android:src="@drawable/noodles_4_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shape_BOTTOM"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/shape_LEFT"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_gravity="bottom"
                android:scaleType="centerInside"
                android:src="@drawable/star_1_outline"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/shape_BOTTOM"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.503" />

            <ImageView
                android:id="@+id/shape_BOTTOM"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerInside"
                android:src="@drawable/star_2_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shape_LEFT" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:src="@drawable/newcolorsblack"
        android:scaleY="0.4"
        android:scaleX="0.4"
        android:layout_alignBottom="@id/rotating_answers_linear_layout"
        android:layout_marginBottom="115.7dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="-390dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fantastic"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/main_app_font"
            android:textSize="50sp"
            android:shadowColor="@color/blue"
            android:shadowDx="10"
            android:shadowDy="50"
            android:shadowRadius="15"
            android:id="@+id/fantasticWithAirplaneTV"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="175dp"
            android:layout_height="200dp"
            app:lottie_rawRes="@raw/airplaneflyinganimation"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            android:id="@+id/airplaneAnimation"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="700dp"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/welldoneAnimationRelativeLayout"
        android:visibility="invisible">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/welldone"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"
            app:lottie_speed="1"
            android:id="@+id/welldoneConfetiAnimation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Well done!"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:textSize="30sp"
            android:fontFamily="@font/main_app_font"
            android:alpha="0"
            android:id="@+id/welldoneTV"
            />
    </RelativeLayout>



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:id="@+id/newHighScoreRelativeLayout"
        android:layout_marginStart="-180dp"
        android:alpha="0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New High Score!"
            android:layout_marginTop="85dp"
            android:fontFamily="@font/main_app_font"
            android:textSize="20sp"
            android:alpha="0.7"
            android:layout_toEndOf="@id/newhighscoretrophyimage"
            android:id="@+id/newhighscore"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignTop="@id/newhighscore"
            android:src="@drawable/highscores_numberonebadge"
            android:layout_marginTop="2dp"
            android:layout_marginStart="5dp"
            android:id="@+id/newhighscoretrophyimage"
            />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/fireworks1"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:layout_marginTop="80dp"
            app:lottie_rawRes="@raw/fireworksanimation"
            app:lottie_autoPlay="false"
            app:lottie_loop="false" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/fireworks2"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginLeft="80dp"
            android:layout_marginBottom="40dp"
            app:lottie_rawRes="@raw/fireworksanimation"
            app:lottie_autoPlay="false"
            app:lottie_loop="false"/>
    </RelativeLayout>






</RelativeLayout>